{CI} Fix regression test pipeline (#28313)
* fix regression test pipeline

* use variables for service connection name

--- a/scripts/regression_test/extension_regression_test.yml
+++ b/scripts/regression_test/extension_regression_test.yml
@@ -24,7 +24,7 @@ jobs:
     - task: AzureCLI@1
       displayName: 'checkout branch'
       inputs:
-        azureSubscription: 'Azure CLI release'
+        azureSubscription: $(AZURE_SDK_INFRA_SUB_CONNECTED_SERVICE)
         scriptLocation: inlineScript
         inlineScript: |
           set -ev
@@ -81,7 +81,7 @@ jobs:
   - task: AzureCLI@1
     displayName: 'checkout cli and extension repo'
     inputs:
-      azureSubscription: 'Azure CLI release'
+      azureSubscription: $(AZURE_SDK_INFRA_SUB_CONNECTED_SERVICE)
       scriptLocation: inlineScript
       inlineScript: |
         set -ev
@@ -106,17 +106,20 @@ jobs:
   - template: ../../.azure-pipelines/templates/azdev_setup.yml
     parameters:
       CLIExtensionRepoPath: ./azure-cli-extensions
-  - bash: |
-      set -ev
-
-      source env/bin/activate
-      cd azure-cli-extensions
-
-      az login -u $(CLI_LIVE_TEST_ACCOUNT) -p "$(CLI_LIVE_TEST_PASSWORD)"
-      az account set -s 0b1f6471-1bf0-4dda-aec3-cb9272f09590
-
-      python ../scripts/ci/automation_full_test.py "12" "$(Instance_idx)" "latest" "" "True" "extension"
-    displayName: "Rerun tests"
+  - task: AzureCLI@1
+    displayName: 'Rerun tests'
+    inputs:
+      azureSubscription: $(AZURE_SDK_TEST_SUB_CONNECTED_SERVICE)
+      scriptLocation: inlineScript
+      inlineScript: |
+        set -ev
+  
+        source env/bin/activate
+        cd azure-cli-extensions
+  
+        az account set -s 0b1f6471-1bf0-4dda-aec3-cb9272f09590
+  
+        python ../scripts/ci/automation_full_test.py "12" "$(Instance_idx)" "latest" "" "True" "extension"
   - bash: |
       publishErrorModules='false'
       if [[ -f '/$(HOME)/.azdev/env_config/mnt/vss/_work/1/s/env/test_results_error_modules_$(Instance_idx).txt' ]]; then
@@ -159,7 +162,7 @@ jobs:
     - task: AzureCLI@1
       displayName: 'Result Summary'
       inputs:
-        azureSubscription: 'Azure CLI release'
+        azureSubscription: $(AZURE_SDK_INFRA_SUB_CONNECTED_SERVICE)
         scriptLocation: inlineScript
         inlineScript: |
           set -ev
