Avoid key error in case of reading for cloud from json file

--- a/src/azure-cli/azure/cli/command_modules/rdbms/config.json
+++ b/src/azure-cli/azure/cli/command_modules/rdbms/config.json
@@ -14,5 +14,13 @@
             "subscriptions": ["d4fbfa87-b94d-4b13-906f-97361388c5e4"],
             "privateDnsZoneDomain": "pg.ossmc-scus1-a.mscds.com"
         }
+    },
+    "AzureChinaCloud": {
+    },
+    "AzureUSGovernment": {
+    },
+    "AzureGermanCloud": {
+    },
+    "Stage": {
     }
 }
