--- a/src/azure-cli/azure/cli/command_modules/cosmosdb/tests/latest/recordings/test_cosmosdb_locations.yaml
+++ b/src/azure-cli/azure/cli/command_modules/cosmosdb/tests/latest/recordings/test_cosmosdb_locations.yaml
@@ -11,7 +11,7 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - AZURECLI/2.55.0 azsdk-python-mgmt-cosmosdb/0.7.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)
+      - AZURECLI/2.57.0 azsdk-python-mgmt-cosmosdb/9.4.0 Python/3.10.11 (Windows-10-10.0.19045-SP0)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.DocumentDB/locations?api-version=2023-11-15
   response:
@@ -22,7 +22,7 @@ interactions:
         Southeast","properties":{"supportsAvailabilityZone":false,"isResidencyRestricted":false,"isSubscriptionRegionAccessAllowedForAz":false,"isSubscriptionRegionAccessAllowedForRegular":false,"status":"Online","backupStorageRedundancies":["Geo","Local"]}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.DocumentDB/locations/canadacentral","type":"Microsoft.DocumentDB/locations","name":"Canada
         Central","properties":{"supportsAvailabilityZone":true,"isResidencyRestricted":false,"isSubscriptionRegionAccessAllowedForAz":false,"isSubscriptionRegionAccessAllowedForRegular":true,"status":"Online","backupStorageRedundancies":["Geo","Local","Zone"]}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.DocumentDB/locations/centralindia","type":"Microsoft.DocumentDB/locations","name":"Central
         India","properties":{"supportsAvailabilityZone":true,"isResidencyRestricted":false,"isSubscriptionRegionAccessAllowedForAz":false,"isSubscriptionRegionAccessAllowedForRegular":true,"status":"Online","backupStorageRedundancies":["Geo","Local","Zone"]}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.DocumentDB/locations/southeastasia","type":"Microsoft.DocumentDB/locations","name":"Southeast
-        Asia","properties":{"supportsAvailabilityZone":true,"isResidencyRestricted":true,"isSubscriptionRegionAccessAllowedForAz":false,"isSubscriptionRegionAccessAllowedForRegular":true,"status":"Online","backupStorageRedundancies":["Geo","Local","Zone"]}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.DocumentDB/locations/switzerlandnorth","type":"Microsoft.DocumentDB/locations","name":"Switzerland
+        Asia","properties":{"supportsAvailabilityZone":true,"isResidencyRestricted":true,"isSubscriptionRegionAccessAllowedForAz":true,"isSubscriptionRegionAccessAllowedForRegular":true,"status":"Online","backupStorageRedundancies":["Geo","Local","Zone"]}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.DocumentDB/locations/switzerlandnorth","type":"Microsoft.DocumentDB/locations","name":"Switzerland
         North","properties":{"supportsAvailabilityZone":true,"isResidencyRestricted":false,"isSubscriptionRegionAccessAllowedForAz":false,"isSubscriptionRegionAccessAllowedForRegular":false,"status":"Online","backupStorageRedundancies":["Geo","Local","Zone"]}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.DocumentDB/locations/uaenorth","type":"Microsoft.DocumentDB/locations","name":"UAE
         North","properties":{"supportsAvailabilityZone":true,"isResidencyRestricted":false,"isSubscriptionRegionAccessAllowedForAz":false,"isSubscriptionRegionAccessAllowedForRegular":false,"status":"Online","backupStorageRedundancies":["Geo","Local","Zone"]}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.DocumentDB/locations/eastasia","type":"Microsoft.DocumentDB/locations","name":"East
         Asia","properties":{"supportsAvailabilityZone":true,"isResidencyRestricted":false,"isSubscriptionRegionAccessAllowedForAz":false,"isSubscriptionRegionAccessAllowedForRegular":false,"status":"Online","backupStorageRedundancies":["Geo","Local","Zone"]}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.DocumentDB/locations/ukwest","type":"Microsoft.DocumentDB/locations","name":"UK
@@ -31,7 +31,7 @@ interactions:
         Europe","properties":{"supportsAvailabilityZone":true,"isResidencyRestricted":false,"isSubscriptionRegionAccessAllowedForAz":true,"isSubscriptionRegionAccessAllowedForRegular":true,"status":"Online","backupStorageRedundancies":["Geo","Zone","Local"]}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.DocumentDB/locations/eastus2","type":"Microsoft.DocumentDB/locations","name":"East
         US 2","properties":{"supportsAvailabilityZone":true,"isResidencyRestricted":false,"isSubscriptionRegionAccessAllowedForAz":false,"isSubscriptionRegionAccessAllowedForRegular":true,"status":"Online","backupStorageRedundancies":["Geo","Zone","Local"]}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.DocumentDB/locations/westus","type":"Microsoft.DocumentDB/locations","name":"West
         US","properties":{"supportsAvailabilityZone":false,"isResidencyRestricted":false,"isSubscriptionRegionAccessAllowedForAz":false,"isSubscriptionRegionAccessAllowedForRegular":true,"status":"Online","backupStorageRedundancies":["Geo","Local"]}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.DocumentDB/locations/eastus","type":"Microsoft.DocumentDB/locations","name":"East
-        US","properties":{"supportsAvailabilityZone":true,"isResidencyRestricted":false,"isSubscriptionRegionAccessAllowedForAz":true,"isSubscriptionRegionAccessAllowedForRegular":true,"status":"Online","backupStorageRedundancies":["Geo","Zone","Local"]}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.DocumentDB/locations/westus3","type":"Microsoft.DocumentDB/locations","name":"West
+        US","properties":{"supportsAvailabilityZone":true,"isResidencyRestricted":false,"isSubscriptionRegionAccessAllowedForAz":false,"isSubscriptionRegionAccessAllowedForRegular":true,"status":"Online","backupStorageRedundancies":["Geo","Zone","Local"]}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.DocumentDB/locations/westus3","type":"Microsoft.DocumentDB/locations","name":"West
         US 3","properties":{"supportsAvailabilityZone":true,"isResidencyRestricted":false,"isSubscriptionRegionAccessAllowedForAz":false,"isSubscriptionRegionAccessAllowedForRegular":true,"status":"Online","backupStorageRedundancies":["Geo","Local","Zone"]}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.DocumentDB/locations/australiaeast","type":"Microsoft.DocumentDB/locations","name":"Australia
         East","properties":{"supportsAvailabilityZone":true,"isResidencyRestricted":false,"isSubscriptionRegionAccessAllowedForAz":true,"isSubscriptionRegionAccessAllowedForRegular":true,"status":"Online","backupStorageRedundancies":["Geo","Zone","Local"]}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.DocumentDB/locations/brazilsouth","type":"Microsoft.DocumentDB/locations","name":"Brazil
         South","properties":{"supportsAvailabilityZone":true,"isResidencyRestricted":true,"isSubscriptionRegionAccessAllowedForAz":false,"isSubscriptionRegionAccessAllowedForRegular":false,"status":"Online","backupStorageRedundancies":["Geo","Local","Zone"]}},{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.DocumentDB/locations/germanywestcentral","type":"Microsoft.DocumentDB/locations","name":"Germany
@@ -80,21 +80,19 @@ interactions:
       content-type:
       - application/json
       date:
-      - Wed, 13 Dec 2023 22:54:56 GMT
+      - Tue, 20 Feb 2024 01:36:31 GMT
       pragma:
       - no-cache
-      server:
-      - Microsoft-HTTPAPI/2.0
       strict-transport-security:
       - max-age=31536000; includeSubDomains
-      transfer-encoding:
-      - chunked
-      vary:
-      - Accept-Encoding
+      x-cache:
+      - CONFIG_NOCACHE
       x-content-type-options:
       - nosniff
       x-ms-gatewayversion:
       - version=2.14.0
+      x-msedge-ref:
+      - 'Ref A: 81FFA31CB5A444A7B921042AE7DE941E Ref B: CO6AA3150219017 Ref C: 2024-02-20T01:35:55Z'
     status:
       code: 200
       message: Ok
@@ -112,7 +110,7 @@ interactions:
       ParameterSetName:
       - --location
       User-Agent:
-      - AZURECLI/2.55.0 azsdk-python-mgmt-cosmosdb/0.7.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)
+      - AZURECLI/2.57.0 azsdk-python-mgmt-cosmosdb/9.4.0 Python/3.10.11 (Windows-10-10.0.19045-SP0)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.DocumentDB/locations/westus?api-version=2023-11-15
   response:
@@ -127,21 +125,19 @@ interactions:
       content-type:
       - application/json
       date:
-      - Wed, 13 Dec 2023 22:54:56 GMT
+      - Tue, 20 Feb 2024 01:36:32 GMT
       pragma:
       - no-cache
-      server:
-      - Microsoft-HTTPAPI/2.0
       strict-transport-security:
       - max-age=31536000; includeSubDomains
-      transfer-encoding:
-      - chunked
-      vary:
-      - Accept-Encoding
+      x-cache:
+      - CONFIG_NOCACHE
       x-content-type-options:
       - nosniff
       x-ms-gatewayversion:
       - version=2.14.0
+      x-msedge-ref:
+      - 'Ref A: 897A918F912648A0A946ABEE5A2925E6 Ref B: CO6AA3150219053 Ref C: 2024-02-20T01:36:32Z'
     status:
       code: 200
       message: Ok
