--- a/src/azure-cli/azure/cli/command_modules/monitor/tests/latest/recordings/test_monitor_log_analytics_workspace_link_target_available_service.yaml
+++ b/src/azure-cli/azure/cli/command_modules/monitor/tests/latest/recordings/test_monitor_log_analytics_workspace_link_target_available_service.yaml
@@ -13,12 +13,12 @@ interactions:
       ParameterSetName:
       - -g -n
       User-Agent:
-      - AZURECLI/2.55.0 azsdk-python-azure-mgmt-resource/23.1.0b2 Python/3.10.6 (macOS-14.2-x86_64-i386-64bit)
+      - AZURECLI/2.57.0 azsdk-python-core/1.28.0 Python/3.10.11 (Windows-10-10.0.19045-SP0)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/test_monitor_log_analytics_workspace_link_target000001?api-version=2022-09-01
   response:
     body:
-      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/test_monitor_log_analytics_workspace_link_target000001","name":"test_monitor_log_analytics_workspace_link_target000001","type":"Microsoft.Resources/resourceGroups","location":"westus","tags":{"product":"azurecli","cause":"automation","test":"test_monitor_log_analytics_workspace_link_target_available_service","date":"2023-12-14T03:54:12Z","module":"monitor"},"properties":{"provisioningState":"Succeeded"}}'
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/test_monitor_log_analytics_workspace_link_target000001","name":"test_monitor_log_analytics_workspace_link_target000001","type":"Microsoft.Resources/resourceGroups","location":"westus","tags":{"product":"azurecli","cause":"automation","test":"test_monitor_log_analytics_workspace_link_target_available_service","date":"2024-02-21T05:54:40Z","module":"monitor"},"properties":{"provisioningState":"Succeeded"}}'
     headers:
       cache-control:
       - no-cache
@@ -27,17 +27,19 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Thu, 14 Dec 2023 03:54:22 GMT
+      - Wed, 21 Feb 2024 05:54:47 GMT
       expires:
       - '-1'
       pragma:
       - no-cache
       strict-transport-security:
       - max-age=31536000; includeSubDomains
-      vary:
-      - Accept-Encoding
+      x-cache:
+      - CONFIG_NOCACHE
       x-content-type-options:
       - nosniff
+      x-msedge-ref:
+      - 'Ref A: 5CF2E99A0D5345B9A1BD23865383B4D2 Ref B: MAA201060513037 Ref C: 2024-02-21T05:54:48Z'
     status:
       code: 200
       message: OK
@@ -61,12 +63,12 @@ interactions:
       ParameterSetName:
       - -g -n
       User-Agent:
-      - AZURECLI/2.55.0 (AAZ) azsdk-python-core/1.28.0 Python/3.10.6 (macOS-14.2-x86_64-i386-64bit)
+      - AZURECLI/2.57.0 azsdk-python-core/1.28.0 Python/3.10.11 (Windows-10-10.0.19045-SP0)
     method: PUT
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/test_monitor_log_analytics_workspace_link_target000001/providers/Microsoft.OperationalInsights/workspaces/ws-000002?api-version=2022-10-01
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/test_monitor_log_analytics_workspace_link_target000001/providers/Microsoft.OperationalInsights/workspaces/ws-000002?api-version=2023-09-01
   response:
     body:
-      string: '{"properties":{"customerId":"0888bf59-3e9c-4c3e-8934-83b82cfab1e1","provisioningState":"Creating","sku":{"name":"PerGB2018","lastSkuUpdate":"2023-12-14T03:54:25.5051558Z"},"retentionInDays":30,"features":{"legacy":0,"searchVersion":1,"enableLogAccessUsingOnlyResourcePermissions":true},"workspaceCapping":{"dailyQuotaGb":-1.0,"quotaNextResetTime":"2023-12-15T00:00:00Z","dataIngestionStatus":"RespectQuota"},"publicNetworkAccessForIngestion":"Enabled","publicNetworkAccessForQuery":"Enabled","createdDate":"2023-12-14T03:54:25.5051558Z","modifiedDate":"2023-12-14T03:54:25.5051558Z"},"location":"westus","id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/test_monitor_log_analytics_workspace_link_target000001/providers/Microsoft.OperationalInsights/workspaces/ws-000002","name":"ws-000002","type":"Microsoft.OperationalInsights/workspaces","etag":"\"1c0449af-0000-0700-0000-657a7c710000\""}'
+      string: '{"properties":{"customerId":"7ec5e047-1608-44c0-8f71-2f71ab669c3d","provisioningState":"Creating","sku":{"name":"PerGB2018","lastSkuUpdate":"2024-02-21T05:54:50.3713444Z"},"retentionInDays":30,"features":{"legacy":0,"searchVersion":1,"enableLogAccessUsingOnlyResourcePermissions":true},"workspaceCapping":{"dailyQuotaGb":-1.0,"quotaNextResetTime":"2024-02-22T05:00:00Z","dataIngestionStatus":"RespectQuota"},"publicNetworkAccessForIngestion":"Enabled","publicNetworkAccessForQuery":"Enabled","createdDate":"2024-02-21T05:54:50.3713444Z","modifiedDate":"2024-02-21T05:54:50.3713444Z"},"location":"westus","id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/test_monitor_log_analytics_workspace_link_target000001/providers/Microsoft.OperationalInsights/workspaces/ws-000002","name":"ws-000002","type":"Microsoft.OperationalInsights/workspaces","etag":"\"e200e93f-0000-0700-0000-65d5902a0000\""}'
     headers:
       access-control-allow-origin:
       - '*'
@@ -79,21 +81,25 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Thu, 14 Dec 2023 03:54:25 GMT
+      - Wed, 21 Feb 2024 05:54:50 GMT
       expires:
       - '-1'
       location:
-      - https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/test_monitor_log_analytics_workspace_link_target000001/providers/Microsoft.OperationalInsights/workspaces/ws-000002?api-version=2022-10-01
+      - https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/test_monitor_log_analytics_workspace_link_target000001/providers/Microsoft.OperationalInsights/workspaces/ws-000002?api-version=2023-09-01
       pragma:
       - no-cache
       request-context:
       - appId=cid-v1:e6336c63-aab2-45f0-996a-e5dbab2a1508
       strict-transport-security:
       - max-age=31536000; includeSubDomains
+      x-cache:
+      - CONFIG_NOCACHE
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-writes:
-      - '1199'
+      - '1196'
+      x-msedge-ref:
+      - 'Ref A: A834EFC36FC24EBA99FC4A6254B25EFF Ref B: MAA201060516037 Ref C: 2024-02-21T05:54:48Z'
       x-powered-by:
       - ASP.NET
     status:
@@ -113,12 +119,12 @@ interactions:
       ParameterSetName:
       - -g -n
       User-Agent:
-      - AZURECLI/2.55.0 (AAZ) azsdk-python-core/1.28.0 Python/3.10.6 (macOS-14.2-x86_64-i386-64bit)
+      - AZURECLI/2.57.0 azsdk-python-core/1.28.0 Python/3.10.11 (Windows-10-10.0.19045-SP0)
     method: GET
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/test_monitor_log_analytics_workspace_link_target000001/providers/Microsoft.OperationalInsights/workspaces/ws-000002?api-version=2022-10-01
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/test_monitor_log_analytics_workspace_link_target000001/providers/Microsoft.OperationalInsights/workspaces/ws-000002?api-version=2023-09-01
   response:
     body:
-      string: '{"properties":{"customerId":"0888bf59-3e9c-4c3e-8934-83b82cfab1e1","provisioningState":"Creating","sku":{"name":"PerGB2018","lastSkuUpdate":"2023-12-14T03:54:25.5051558Z"},"retentionInDays":30,"features":{"legacy":0,"searchVersion":1,"enableLogAccessUsingOnlyResourcePermissions":true},"workspaceCapping":{"dailyQuotaGb":-1.0,"quotaNextResetTime":"2023-12-15T00:00:00Z","dataIngestionStatus":"RespectQuota"},"publicNetworkAccessForIngestion":"Enabled","publicNetworkAccessForQuery":"Enabled","createdDate":"2023-12-14T03:54:25.5051558Z","modifiedDate":"2023-12-14T03:54:25.5051558Z"},"location":"westus","id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/test_monitor_log_analytics_workspace_link_target000001/providers/Microsoft.OperationalInsights/workspaces/ws-000002","name":"ws-000002","type":"Microsoft.OperationalInsights/workspaces","etag":"\"1c0449af-0000-0700-0000-657a7c710000\""}'
+      string: '{"properties":{"customerId":"7ec5e047-1608-44c0-8f71-2f71ab669c3d","provisioningState":"Succeeded","sku":{"name":"PerGB2018","lastSkuUpdate":"2024-02-21T05:54:50.3713444Z"},"retentionInDays":30,"features":{"legacy":0,"searchVersion":1,"enableLogAccessUsingOnlyResourcePermissions":true},"workspaceCapping":{"dailyQuotaGb":-1.0,"quotaNextResetTime":"2024-02-22T05:00:00Z","dataIngestionStatus":"RespectQuota"},"publicNetworkAccessForIngestion":"Enabled","publicNetworkAccessForQuery":"Enabled","createdDate":"2024-02-21T05:54:50.3713444Z","modifiedDate":"2024-02-21T05:54:51.7020129Z"},"location":"westus","id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/test_monitor_log_analytics_workspace_link_target000001/providers/Microsoft.OperationalInsights/workspaces/ws-000002","name":"ws-000002","type":"Microsoft.OperationalInsights/workspaces","etag":"\"e200ec3f-0000-0700-0000-65d5902b0000\""}'
     headers:
       access-control-allow-origin:
       - '*'
@@ -127,11 +133,11 @@ interactions:
       cache-control:
       - no-cache
       content-length:
-      - '913'
+      - '914'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Thu, 14 Dec 2023 03:54:26 GMT
+      - Wed, 21 Feb 2024 05:54:51 GMT
       expires:
       - '-1'
       pragma:
@@ -140,12 +146,12 @@ interactions:
       - appId=cid-v1:e6336c63-aab2-45f0-996a-e5dbab2a1508
       strict-transport-security:
       - max-age=31536000; includeSubDomains
-      transfer-encoding:
-      - chunked
-      vary:
-      - Accept-Encoding
+      x-cache:
+      - CONFIG_NOCACHE
       x-content-type-options:
       - nosniff
+      x-msedge-ref:
+      - 'Ref A: 77B25619751C4CFC91B90F9FF8C51B6F Ref B: MAA201060516037 Ref C: 2024-02-21T05:54:50Z'
       x-powered-by:
       - ASP.NET
     status:
@@ -163,36 +169,54 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - AZURECLI/2.55.0 (AAZ) azsdk-python-core/1.28.0 Python/3.10.6 (macOS-14.2-x86_64-i386-64bit)
+      - AZURECLI/2.57.0 azsdk-python-core/1.28.0 Python/3.10.11 (Windows-10-10.0.19045-SP0)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.OperationalInsights/linkTargets?api-version=2015-03-20
   response:
     body:
-      string: ''
+      string: "<!DOCTYPE html PUBLIC \"-//W3C//DTD XHTML 1.0 Strict//EN\" \"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd\"\
+        >\r\n<html xmlns=\"http://www.w3.org/1999/xhtml\">\r\n<head>\r\n<meta http-equiv=\"\
+        Content-Type\" content=\"text/html; charset=iso-8859-1\"/>\r\n<title>401 -\
+        \ Unauthorized: Access is denied due to invalid credentials.</title>\r\n<style\
+        \ type=\"text/css\">\r\n<!--\r\nbody{margin:0;font-size:.7em;font-family:Verdana,\
+        \ Arial, Helvetica, sans-serif;background:#EEEEEE;}\r\nfieldset{padding:0\
+        \ 15px 10px 15px;} \r\nh1{font-size:2.4em;margin:0;color:#FFF;}\r\nh2{font-size:1.7em;margin:0;color:#CC0000;}\
+        \ \r\nh3{font-size:1.2em;margin:10px 0 0 0;color:#000000;} \r\n#header{width:96%;margin:0\
+        \ 0 0 0;padding:6px 2% 6px 2%;font-family:\"trebuchet MS\", Verdana, sans-serif;color:#FFF;\r\
+        \nbackground-color:#555555;}\r\n#content{margin:0 0 0 2%;position:relative;}\r\
+        \n.content-container{background:#FFF;width:96%;margin-top:8px;padding:10px;position:relative;}\r\
+        \n-->\r\n</style>\r\n</head>\r\n<body>\r\n<div id=\"header\"><h1>Server Error</h1></div>\r\
+        \n<div id=\"content\">\r\n <div class=\"content-container\"><fieldset>\r\n\
+        \  <h2>401 - Unauthorized: Access is denied due to invalid credentials.</h2>\r\
+        \n  <h3>You do not have permission to view this directory or page using the\
+        \ credentials that you supplied.</h3>\r\n </fieldset></div>\r\n</div>\r\n\
+        </body>\r\n</html>\r\n"
     headers:
       access-control-allow-origin:
       - '*'
       cache-control:
-      - no-cache
+      - private
       content-length:
-      - '0'
+      - '1293'
+      content-type:
+      - text/html
       date:
-      - Thu, 14 Dec 2023 03:54:34 GMT
-      expires:
-      - '-1'
-      pragma:
-      - no-cache
+      - Wed, 21 Feb 2024 05:54:53 GMT
       request-context:
       - appId=cid-v1:e6336c63-aab2-45f0-996a-e5dbab2a1508
       strict-transport-security:
       - max-age=31536000; includeSubDomains
+      x-cache:
+      - CONFIG_NOCACHE
       x-content-type-options:
       - nosniff
+      x-msedge-ref:
+      - 'Ref A: 13DA8779EE0B4C6F90F20ED6F3041AAB Ref B: MAA201060514019 Ref C: 2024-02-21T05:54:53Z'
       x-powered-by:
       - ASP.NET
     status:
-      code: 404
-      message: Not Found
+      code: 401
+      message: Unauthorized
 - request:
     body: null
     headers:
@@ -207,12 +231,12 @@ interactions:
       ParameterSetName:
       - -g --workspace-name
       User-Agent:
-      - AZURECLI/2.55.0 (AAZ) azsdk-python-core/1.28.0 Python/3.10.6 (macOS-14.2-x86_64-i386-64bit)
+      - AZURECLI/2.57.0 azsdk-python-core/1.28.0 Python/3.10.11 (Windows-10-10.0.19045-SP0)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/test_monitor_log_analytics_workspace_link_target000001/providers/Microsoft.OperationalInsights/workspaces/ws-000002/availableServiceTiers?api-version=2020-08-01
   response:
     body:
-      string: '[{"serviceTier":"PerGB2018","enabled":true,"minimumRetention":30,"maximumRetention":730,"defaultRetention":30},{"serviceTier":"CapacityReservation","enabled":true,"minimumRetention":30,"maximumRetention":730,"defaultRetention":31,"lastSkuUpdate":"2023-12-14T03:54:25.5051558Z"}]'
+      string: '[{"serviceTier":"PerGB2018","enabled":true,"minimumRetention":30,"maximumRetention":730,"defaultRetention":30},{"serviceTier":"CapacityReservation","enabled":true,"minimumRetention":30,"maximumRetention":730,"defaultRetention":31,"lastSkuUpdate":"2024-02-21T05:54:50.3713444Z"}]'
     headers:
       access-control-allow-origin:
       - '*'
@@ -223,7 +247,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Thu, 14 Dec 2023 03:54:36 GMT
+      - Wed, 21 Feb 2024 05:54:55 GMT
       expires:
       - '-1'
       pragma:
@@ -232,12 +256,12 @@ interactions:
       - appId=cid-v1:e6336c63-aab2-45f0-996a-e5dbab2a1508
       strict-transport-security:
       - max-age=31536000; includeSubDomains
-      transfer-encoding:
-      - chunked
-      vary:
-      - Accept-Encoding
+      x-cache:
+      - CONFIG_NOCACHE
       x-content-type-options:
       - nosniff
+      x-msedge-ref:
+      - 'Ref A: F598548296564A2DB4FC6B17A15861E9 Ref B: MAA201060514019 Ref C: 2024-02-21T05:54:54Z'
       x-powered-by:
       - ASP.NET
     status:
