--- a/src/azure-cli/azure/cli/command_modules/network/linter_exclusions.yml
+++ b/src/azure-cli/azure/cli/command_modules/network/linter_exclusions.yml
@@ -115,6 +115,16 @@ network express-route port identity:
 network express-route port link:
     rule_exclusions:
     - require_wait_command_if_no_wait
+network vnet-gateway create:
+    parameters:
+        allow_remote_vnet_traffic:
+            rule_exclusions:
+            - option_length_too_long
+network vnet-gateway update:
+    parameters:
+        allow_remote_vnet_traffic:
+            rule_exclusions:
+            - option_length_too_long
 network vnet-gateway aad:
     rule_exclusions:
     - require_wait_command_if_no_wait
