[Security] Define security api-collections and security-connectors commands (#28285)
* Define security api-collections and security-connectors commands

* make commands as singular verbs

* Reorganize api-collection commands

--- a/src/azure-cli/azure/cli/command_modules/security/linter_exclusions.yml
+++ b/src/azure-cli/azure/cli/command_modules/security/linter_exclusions.yml
@@ -24,4 +24,10 @@ security jit-policy show:
         location:
             rule_exclusions:
             - no_required_location_param
+
+security security-connector devops update:
+    parameters:
+        authorization_code:
+            rule_exclusions:
+            - missing_parameter_test_coverage
 ...
