--- a/.github/workflows/BlockPRMerge.yml
+++ b/.github/workflows/BlockPRMerge.yml
@@ -1,4 +1,4 @@
-name: Block PR merging on "do-not-merge" label
+name: Block PR merging on blocled labels
 
 on:
   pull_request_target:
@@ -8,14 +8,16 @@ jobs:
   block-merge:
     runs-on: ubuntu-latest
     steps:
-      - name: Check "do-not-merge" label
+      - name: Check blocked labels
         uses: actions/github-script@v7
         with:
           script: |
             const labels = context.payload.pull_request.labels.map(label => label.name);
-            if (labels.includes("do-not-merge")) {
-              console.log("It is not allowed to merge a PR with 'do-not-merge' label.");
+            const blockedLabels = ["do-not-merge", "needs-author-feedback"];
+            
+            if (labels.some(label => blockedLabels.includes(label))) {
+              console.log(`It is not allowed to merge a PR with any blocked labels: ${blockedLabels}`);
               process.exit(1); // Exit with a non-zero status code to block merge
             } else {
-              console.log("It is allowed to merge a PR without 'do-not-merge' label.");
+              console.log("It is allowed to merge the PR.");
             }
